Add 3rd passage

--- a/docs/works/parallel-speech-corpus.mdx
+++ b/docs/works/parallel-speech-corpus.mdx
@@ -59,12 +59,12 @@ Number of Syllables:
         dripping. Could you arrange to send an engineer on Tuesday morning please? It's the only day I can 
         manage this week. I'd be grateful if you could confirm the arrangement in writing.
     </TabItem>
-    <TabItem value="hisyeo" label="Hîsyêô" default><HisyeoText kind='latin'>
-        noyo cînlî îxôlô tô foko nulun xîmu.
-        mîkdol xîmu li odigon cên ûn û ônî bucono xîmu wuîtsî zîgîl xîmu.
-        ¿nîmû kôî li êo gô ôlê ônî xîûfû hoî hêlxun lono yê lono mîhûon cî?
-        ni li lono tôlkî fos noyo wuîtsî xe li bîlûs, hoî wêxôn ôfo hôn.
-        noyo bît li konxo hôn fos nîmû bît belêxu yôcno tô kon cukto.
+    <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
+        noyo cînlî îxôlô tô foko nulun xîmu. mîkdol xîmu li odigon cên ûn û
+        ônî bucono xîmu wuîtsî zîgîl xîmu. ¿nîmû kôî li êo gô ôlê ônî xîûfû
+        hoî hêlxun lono yê lono mîhûon cî? ni li lono tôlkî fos noyo wuîtsî
+        xe li bîlûs, hoî wêxôn ôfo hôn. noyo bît li konxo hôn fos nîmû bît
+        belêxu yôcno tô kon cukto.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="Japanese">
         浄水器の調子が悪いです。水位が高すぎるようで、水が漏れ続けています。申し訳あり
@@ -87,13 +87,13 @@ Number of Syllables:
     </TabItem>
 </Tabs>
 
-### Block O2
+### Text O2
 
 Number of Syllables:
 
 | Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
 |----------|---------|--------|----------|---------|------|------------|
-|       73 |      86 |    128 |      162 |     135 |   74 |         93 |
+|       73 |      86 |    131 |      162 |     135 |   74 |         93 |
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="Mandarin">
@@ -106,11 +106,10 @@ Number of Syllables:
         unsympathetic. All their repair teams are apparently booked out for the next two weeks. Am I 
         supposed to use the cellar as a swimming pool till then?
     </TabItem>
-    <TabItem value="hisyeo" label="Hîsyêô" default><HisyeoText kind='latin'>
-        kûu lufono noyo mût yogô kûngîyo kon dês xowosê.
-        kon xîûfû yê môkôfo xîmu konbokbo xe li wokto yê niwos noyo, li sî funsût li êto xîmu hoî kûncîen yê bûmî sêl.
-        yogô kûngîyo yê foko yoldûn xîmu bi gonzîl zûtô yôk.
-        môî zomo kon xîûfû bi wuktomû li xîyôcû lon dûî wêxôn uklo.
+    <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
+        kûu lufono noyo mût yogô kûngîyo kon dês xowosê. kon xîûfû yê môkôfo xîmu konbokbo xe li
+        wokto yê niwos noyo, li sî funsût li êto xîmu hoî kûncîen yê bûmî sêl. yogô kûngîyo yê foko
+        yoldûn xîmu et nîmû bi gonzîl zûtô yôk. môî zomo kon xîûfû bi wuktomû li xîyôcû lon dûî wêxôn uklo. 
         ¿bêsnêhot fos noyo yôn kûncîen yê bûmî sêl misli zomo xîmu kon dodê mût wokût ulyô ko?
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="Japanese">
@@ -137,6 +136,54 @@ Number of Syllables:
         Tôi đã gọi điện đến thông báo nhưng người ta trả lời tôi là tất cả các đội thợ sửa ống nước đều bận 
         trong hai tuần tới. Tôi thực sự không biết phải làm gì nữa. Nếu cứ tình hình này thì tầng hầm nhà tôi sẽ 
         trở thành bể bơi.
+    </TabItem>
+</Tabs>
+
+### Text O3
+
+Number of Syllables:
+
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|       73 |      85 |    131 |      153 |     111 |   85 |         55 |
+
+<Tabs groupId="sobis-yê-cîes">
+    <TabItem value="CMN" label="Mandarin">
+        喂，市消防队。我们正在定位一个报火警的位置，他没有提供详细信息就挂了。他用的
+        是市话，打的是我们762 854这条线。我们希望立即追踪这个人，因为他听上去很绝望，谢谢。
+    </TabItem>
+    <TabItem value="ENG" label="English">
+        Municipal Fire Service speaking. We're trying to locate an emergency
+        caller who rang off without giving any personal details. He appeared to
+        be on the local network. He connected on our line number 762 584. We'd
+        appreciate immediate attempts to trace him because he sounded desperate.
+    </TabItem>
+    <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
+        foko yoldûn môtô yê boxô kon bôklôn folo li kôto. nûs dênêmêk xe yosten
+        ônî xokûlû gongoxî xe li sî cok sûn kon xokûlû bi yôk xe cûdo dêtoî umo.
+        nîo li xoînbo hoî nec fêlkonô onô. nîo dî sî ûnîdû hoî onwonî kon xokûlû
+        nûs 762 584. nûs bît li konxo yê dênêmêk mîoû yê fos wêtodû nîo nênko
+        fos li xoînbo û fos nîo fuî buswen kotonhon.
+    </HisyeoText></TabItem>
+    <TabItem value="JPN" label="Japanese">
+        もしもし、こちらは市の消防局です。先ほど緊急通報があったのですが、通報者が名前
+        や場所を言わずに電話を切ってしまったので、その位置の特定を試みています。市内通話だ
+        ったようで、こちらの番号76の2584にかけてきました。通報者は絶望的な様子でしたので、
+        緊急を要します。その方の追跡調査をお願い致します。
+    </TabItem>
+    <TabItem value="SPA" label="Spanish">
+        Servicio Municipal de Bomberos al habla. Estamos tratando de localizar una llamada urgente. 
+        Colgaron sin dar ningún detalle personal. Al parecer nos llamaron desde esta ciudad, al número 762 
+        584. Agradeceríamos cualquier cosa que nos ayudara a identificarle puesto que parecía desesperado.
+    </TabItem>
+    <TabItem value="THA" label="Thai">
+        สถานีดบั เพลิงพดูค่ะ เราพยายามหาตา แหน่งของคนที่โทรเข้ามาแจ้งเหตุฉุกเฉิน แต่ไม่ไดท้ ิ้งรายละเอียดไว้เขาโทรเขา้มาจากเครือข่ายภายในทอ้งถิ่น
+        เขาต่อเขา้มาที่เบอร์762 584 เราจะยนิดีมากถา้คุณช่วยติดตามวา่ เขาโทรมาจากไหนเพราะ ดูเหมือนเขาจะตอ้งการความช่วยอยา่ งเร่งด่วน
+    </TabItem>
+    <TabItem value="VIE" label="Vietnamese">
+        Bộ phận cứu hoả xin thông báo: chúng tôi đang cố gắng xác định một cuộc gọi khẩn cấp từ một 
+        người không rõ danh tính. Cô ta gọi đến từ số máy tám bảy sáu hai năm tám bốn. Cần phải tìm ngay cô 
+        gái này: cô ta có vẻ đang rất tuyệt vọng.
     </TabItem>
 </Tabs>
 
