Add small table for time prepositions

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -548,6 +548,20 @@ a more literal translation.
     <p>nûs kûu li nô mût comen fîmôsyôs	hoî kînsê êfun cihôû suhot xêtî wuto nonkû ûsên dûî elfû ûn dûî dus tîû.&emsp;<em>"Let's head to the park at 15 minutes after 7 o'clock, March 14th, 2025"</em></p>
 </HisyeoTabs>
 
+### Time Prepositions
+
+|Hîsyêô|English      |Description                     |
+|------|-------------|--------------------------------|
+| <HisyeoWord is='hoî'/> | at/in/on/when | at a point in time specified |
+| <HisyeoWord is='sûn'/> | since | starting at a point in time specified |
+| <HisyeoWord is='mût'/> | until | ending at a point in time specified |
+| <HisyeoWord is='ilik'/> | before | preceding a point in time specified |
+| <HisyeoWord is='ilik'/> <HisyeoWord is='yôk'/> | when/once | not preceding a point in time specified |
+| <HisyeoWord is='cihôû'/> | after | succeeding a point in time specified |
+| <HisyeoWord is='cihôû'/> <HisyeoWord is='yôk'/> | by | not succeeding a point in time specified |
+| <HisyeoWord is='lon'/> | for | duration specified |
+
+
 ## Measurements
 
 To indicate a measurement of something, it helps to have a way to describe a
