Add two more passages

--- a/docs/works/parallel-speech-corpus.mdx
+++ b/docs/works/parallel-speech-corpus.mdx
@@ -187,4 +187,113 @@ Number of Syllables:
     </TabItem>
 </Tabs>
 
+### Text O4
+
+Number of Syllables:
+
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|       80 |      84 |    161 |      154 |     152 |  110 |         89 |
+
+<Tabs groupId="sobis-yê-cîes">
+    <TabItem value="CMN" label="Mandarin">
+        请帮忙订个早上的出租车。朝阳园的李明先生想早上6点15前到达首都机场3号航站楼。
+        他的航班7点50起飞，但是他要安排超重行李托运。请优先安排并保证准时。他想你们5点半准
+        时到。
+    </TabItem>
+    <TabItem value="ENG" label="English">
+        Please take a request for an early-morning taxi. Mr Spencer of Chestnut
+        Drive wishes to be at Heathrow terminal 4 by 6.15 a.m. His flight's not
+        leaving till 7.50 but he has to arrange for excess baggage. Mark it as
+        top priority and ensure punctuality. He expects the car at 5.30 sharp.
+    </TabItem>
+    <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
+        kûu tûu sôlû kon fiyûxît oxon wûôt yê lono yê hêlxun êto lôtfen. umo
+        Esbencu yê tîton Cesnut xîwon xe hoî boxô kon wedo yê oûtô xîkô et nonkû
+        yê boxô Hîclôû cihôû yôk êfun kînsê yê suhot toû xe ilik lono mutyu. kon
+        xîkô nîo li yôk cok mût êfun tîû dus yê suhot xêtî lêkin û nîo kûu sôlû
+        oxon odîgon zuko. kûu belêxu ni misli sonkon solwôc ûn kûu li gufis hôn
+        cônkôk ye wokut gîk. nîo motsi oûtô hoî êfun niswî dus yê suhot tîû et
+        cônkôk.
+    </HisyeoText></TabItem>
+    <TabItem value="JPN" label="Japan">
+        明日の早朝、中央通りの山田様宅へタクシーを差し向けて下さい。山田様は午前6時15
+        分までに関空第２ターミナルに到着することを希望されています。お客様のご搭乗便は7時
+        50分発ですが、超過手荷物の手続を行う必要があるとの事です。時間厳守でお願いします。
+        必ず5時半に迎えに行って下さい。
+    </TabItem>
+    <TabItem value="SPA" label="Spanish">
+        Por favor, quisiera pedir un taxi para mañana a primera hora. El señor
+        Rodríguez, que vive en la de Avenida del General Martínez Campos, quiere
+        estar en la terminal internacional de Barajas alrededor de las seis y
+        cuarto de la mañana. Su vuelo no sale hasta las ocho menos diez, pero
+        tiene que facturar mucho equipaje. Por favor, que no se les olvide, y
+        sobretodo sean puntuales. El señor Rodríguez estará esperando el taxi a
+        las cinco y media.
+    </TabItem>
+    <TabItem value="THA" label="Thai">
+        กรุณาจองแทก๊ซี่ตอนเชา้ตรู่สา หรับ คุณธีระเดช ที่ปทุมวัน
+        เขาต้องการไปสนามบินดอนเมือง เทอร์มินอล 4 เวลา 6.15 น.
+        เที่ยวบินของเขาจะออกเวลา 7.50 น. แต่เขาตอ้งการเผื่อเวลาสา
+        หรับโหลดกระเป๋าสมั ภาระ ช่วยทา เครื่องหมายว่าเรื่องน้ีเป็นเรื่องส
+        าคัญที่สุด และตอ้งตรงต่อเวลา เขาหวงัวา่ คุณจะมาถึงเวลา 5.30 น. ตรง
+    </TabItem>
+    <TabItem value="VIE" label="Vietnamese">
+        Tôi muốn đặt trước một taxi đón anh Lê Anh Tuấn vào sáng sớm ngày mai;
+        tại địa chỉ ba mươi ba Hàn Thuyên. Anh Tuấn phải có mặt tại sân bay Nội
+        bài trước sáu giờ mười lăm phút. Máy bay sẽ cất cánh lúc bảy giờ năm
+        mươi phút; nhưng anh ấy cần có thời gian để đăng ký hành lý quá cân. Làm
+        ơn nhắn taxi phải đến đúng giờ. Anh ấy sẽ đứng đợi ở dưới nhà lúc năm
+        giờ ba mươi phút.
+    </TabItem>
+</Tabs>
+
+### Text O6
+
+Number of Syllables:
+
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|       64 |      67 |    101 |      129 |     103 |   78 |         80 |
+
+<Tabs groupId="sobis-yê-cîes">
+    <TabItem value="CMN" label="CMN">
+        我想联系东城的张国强夫妇。他们从朝阳新区搬到东城的。您能给我他们新的电话号码
+        么？他们大约是3个月前搬的。据我所知，他们的电话号码是有记录的。
+    </TabItem>
+    <TabItem value="ENG" label="ENG">
+        I'm trying to contact Mr and Mrs W. George of Swindon. They've moved
+        from 63 Spruce Close to another part of Swindon. Can you give me their
+        new number please? They moved approximately 3 months ago. As far as I
+        know they're not ex-directory.
+    </TabItem>
+    <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
+        noyo dênêmêk xe monodo umo Zîôlzu yê sinsî Sûindun ûn hûnsûon nîo. li sî
+        nô sûn boxô 63 yê tîton Esbilûs Kilôs mût yogô dîzel yê sinsî Sûindun.
+        mût noyo cûdo onwonî nêos cî. nîo li sî nô bi êmê hoî niswî wuto ôhêl.
+        oldis fisun noyo û nîo li yôk fonmot sûn golo onwonî.
+    </HisyeoText></TabItem>
+    <TabItem value="JPN" label="JPN">
+        大津市の原田さん夫妻と連絡を取りたいのですが。ご夫妻は神宮町63番地から大津市内
+        の別の住所へ引っ越してしまわれました。引越し先の新しい電話番号を教えていただけませ
+        んか。引っ越されたのは、ほぼ3ヶ月前です。確か「電話帳非掲載者」ではなかったと思い
+        ます。
+    </TabItem>
+    <TabItem value="SPA" label="SPA">
+        Por favor, necesito localizar a los señores Ramírez de Estepona. Hace tres meses vivían en el 
+        Paseo de la Victoria, número 63; ahora viven en otra calle de la misma ciudad. ¿Me podría dar su 
+        nuevo número de teléfono? En la guía todavía aparecen con el número antiguo.
+    </TabItem>
+    <TabItem value="THA" label="Thai">
+        ฉนักา ลงัพยายามติดต่อ ครอบครัวกฤษดา สนักา แพง พวกเขาย้ายมาจาก บ้านเลขที่ 63 แม่ออนใต้ที่อยอู่ ีกส่วนหน่ึงของสนักา แพง
+        กรุณาให้เบอร์โทรศพั ทใ์หม่ของพวกเขา พวกเขาย้ายมาเมื่อประมาณ 3 เดือนที่แล้ว เท่าที่ผมรู้รายชื่อของพวกเราไม่มีอยใู่ นสมุดโทรศพั ท์
+    </TabItem>
+    <TabItem value="VIE" label="Vietnamese">
+        Tôi muốn tìm số điện thoại của gia đình ông; bà Nguyễn Ðăng ở Hà Nội. Trước đây; họ sống ở 
+        số nhà sáu mươi; phố Bà Triệu. Họ đã chuyển nhà và tôi không có địa chỉ mới của họ. Chị có thể vui 
+        lòng cho tôi số điện thoại mới của họ không? Chắc họ đã chuyển nhà được ba tháng rồi. Tôi đã tìm 
+        trong danh bạ điện thoại nhưng không thấy số điện thoại của họ.
+    </TabItem>
+</Tabs>
+
 <HisyeoTooltip/>
