fix for wrong English word in time prep table

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -552,7 +552,7 @@ a more literal translation.
 
 |Hîsyêô|English      |Description                     |
 |------|-------------|--------------------------------|
-| <HisyeoWord is='hoî'/> | at/in/on/when | at a point in time specified |
+| <HisyeoWord is='hoî'/> | at/in/on/whenever | at a point in time specified |
 | <HisyeoWord is='sûn'/> | since | starting at a point in time specified |
 | <HisyeoWord is='mût'/> | until | ending at a point in time specified |
 | <HisyeoWord is='ilik'/> | before | preceding a point in time specified |
