Fix word used in Text 01 (no syllable count change)

--- a/docs/works/parallel-speech-corpus.mdx
+++ b/docs/works/parallel-speech-corpus.mdx
@@ -64,7 +64,7 @@ Number of Syllables:
         ônî bucono xîmu wuîtsî zîgîl xîmu. ¿nîmû kôî li êo gô ôlê ônî xîûfû
         hoî hêlxun lono yê lono mîhûon cî? ni li lono tôlkî fos noyo wuîtsî
         xe li bîlûs, hoî wêxôn ôfo hôn. noyo bît li konxo hôn fos nîmû bît
-        belêxu yôcno tô kon cukto.
+        wofok yôcno tô kon cukto.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="Japanese">
         浄水器の調子が悪いです。水位が高すぎるようで、水が漏れ続けています。申し訳あり
