add another passage

--- a/docs/works/parallel-speech-corpus.mdx
+++ b/docs/works/parallel-speech-corpus.mdx
@@ -352,7 +352,9 @@ Number of Syllables:
 
 Number of Syllables:
 
-
+| Mandarin | English | Hîsyêô | Japanese | Spanish | Thai | Vietnamese |
+|----------|---------|--------|----------|---------|------|------------|
+|       57 |      67 |     97 |       83 |      79 |   60 |         52 |
 
 <Tabs groupId="sobis-yê-cîes">
     <TabItem value="CMN" label="CMN">
@@ -360,12 +362,16 @@ Number of Syllables:
         感兴趣，比如罗马利亚风格的地方。我不想要素菜馆。
     </TabItem>
     <TabItem value="ENG" label="ENG">
-        Can you give me a list of the restaurants in the neighbourhood? I live in Clancy Street, NW1. 
-        I'm interested in something a little more exotic than usual. Perhaps a Polynesian place, for example. I'd 
-        prefer it not to be vegetarian.
+        Can you give me a list of the restaurants in the neighbourhood? I live
+        in Clancy Street, NW1. I'm interested in something a little more exotic
+        than usual. Perhaps a Polynesian place, for example. I'd prefer it not
+        to be vegetarian.
     </TabItem>
     <TabItem value="HIS" label="Hîsyêô" default><HisyeoText kind='latin'>
-        TBC
+        ¿nîmû mût noyo kôî cûdo zûnlo yê gubuyo kon mokon hoî boxô fêlkonô onô?
+        noyo niwos hoî onwonî En Dubulyû Kut yê tîton Kilonsî. noyo sûko uyo xe
+        li bolutê yê eswen yoûtî en sodolun. boxô yê nêxôdî Bolinêxun misli
+        numûno cî. noyo bît sûko fos ni li yôk xûnyu oksûn.
     </HisyeoText></TabItem>
     <TabItem value="JPN" label="JPN">
         この辺のレストランのリストをいただけますか。駒沢通りに住んでいるのですが、こじ
